fix bug scroll and z-index

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2483,7 +2483,7 @@ span.tel {
   transition: -webkit-transform .15s ease-in-out .15s;
   transition: transform .15s ease-in-out .15s;
   transition: transform .15s ease-in-out .15s, -webkit-transform .15s ease-in-out .15s;
-  height: 300px;
+  height: 230px;
   overflow-y: scroll;
 }
 
